tests/expected_invalid_foreign_fn_permit_param.diag.out
<input>:4:24: error: foreign functions may not use permit parameters (`as name: Type` is not allowed here)
    public foreign fn read(as access: Access) -> Int
                           ^^
